# metrics-rs-dashboard-actix

./: Cargo.toml  HIGH_FREQUENCY_IMPROVEMENTS.md  RATE_METRICS.md  README.md  TEST_SUMMARY.md  TROUBLESHOOTING_RATES.md  lib.rs
examples/: custom_rate_tracker.rs  high_frequency_rates.rs  improved_rate_metrics.rs  original_issue_demo.rs  rate_metrics.rs  simple.rs  test_100_per_sec.rs  variable_rate_increment_dashboard.rs
public/: index.html  styles.css
public/app/: main.js
public/app/common/: MetricBuffer.js  PrometheusImport.js  apexDefaultTheme.js  debounce.js  metricUtils.js
public/app/components/: BarChart.js  ChartGrid.js  CounterChart.js  GaugeChart.js  HistogramChart.js  RateChart.js
src/: lib.rs
