[package]
name = "metrics-actix-dashboard"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.10.2"
anyhow = "1.0.98"
env_logger = "0.11.8"
log = "0.4.27"
log-once = "0.4.1"
metrics = "0.24.2"
metrics-prometheus = "0.10.0"
metrics-util = "0.19.1"
tokio = { version = "1.45.0", features = ["full"] }
